# ULib

./: .editorconfig  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE  LICENSE.OpenSSL  Makefile.am  Makefile.in  NEWS  README  README.cdb  README.configure  README.md  THANKS  TODO  ULib.m4  ULib.spec.in  _config.yml  aclocal.m4  autogen.sh  configure  configure.ac  configure.help  configure_h.awk  configure_log.awk  index.html  index.md  params.json  rpm.sh  rpm.sh.in  rpmpkgreq.lst  rpmpkgreq.lst.suse  shtool  ulib.html  userver.service.in
contrib/: Makefile.am  Makefile.in
contrib/HCSP/: CSP.dbg  CSP.fcfg  CSP.fld  CSP.func  CSP.h  HCSP.c  HCSP.err  Makefile.am  Makefile.in  WinCrypt.h
contrib/RSIGN/: Makefile.am  Makefile.in  RSIGN.c  RSIGN.err
contrib/signer/: Makefile.am  Makefile.in  RECTWrapper.h  signer.cpp  window.cpp  window.h
examples/: Makefile.am  Makefile.in  README
examples/IR/: IR.cpp  IR.h  Makefile.am  Makefile.in  cquery.cpp  cquery.h  db_check.cpp  db_dump.cpp  gendoc.cpp  index1.cpp  index2.cpp  ir_session.h  ir_web.cpp  ir_web.usp  posting.cpp  posting.h  query.cpp  searchengine-bin.spec.in  update.cpp
examples/PEC_log/: Makefile.am  Makefile.in  PEC_check_namefile.cpp  PEC_date_generator.cpp  PEC_log.spec.in  PEC_report.cpp  PEC_report.h  PEC_report_anomalie.cpp  PEC_report_anomalie.h  PEC_report_anomalie1.cpp  PEC_report_anomalie2.cpp  PEC_report_messaggi.cpp  PEC_report_options.h  PEC_report_rejected.cpp  PEC_report_virus.cpp
examples/WiAuth/: Makefile.am  Makefile.in  cdbmake.cpp  check_binary.cpp  count_traffic.cpp  count_traffic1.cpp  login_adjust.cpp  rdbgen.cpp  wi_auth.cpp  wi_auth.usp
examples/XAdES/: Makefile.am  Makefile.in  XAdES.spec.in  archive.cpp  client.cpp  context.cpp  context.h  feed.cpp  sign.cpp  transform.cpp  transforms.h  utility.cpp  utility.h  verify.cpp  xpath.cpp  xpath.h
examples/csp/: Makefile.am  Makefile.in  cspclient.cpp  cspclient.spec.in  cspclient_rpc.cpp  cspclient_rpc.spec.in  main.cpp  usage.txt
examples/doc_classifier/: DocumentClassifier.cpp  DocumentClassifier.h  Makefile.am  Makefile.in  main.cpp
examples/doc_parse/: Makefile.am  Makefile.in  doc_parse.spec.in  doc_parse.start  parse.cpp
examples/download_accelerator/: Makefile.am  Makefile.in  main.cpp
examples/form_completion/: Makefile.am  Makefile.in  main.cpp
examples/hello/: Makefile.am  Makefile.in  hello.cpp  hello.sh
examples/http_header/: HttpBaAuthorization.cpp  HttpBaWwwAuthenticate.cpp  HttpCookie.cpp  HttpField.cpp  HttpHeader.cpp  HttpLocation.cpp  HttpOtpPostLogin.cpp  HttpRequestHeader.cpp  HttpResponseHeader.cpp  HttpSetCookie.cpp  Makefile.am  Makefile.in  OtpAuthToken.cpp
examples/lcsp/: Makefile.am  Makefile.in  lcsp.spec.in  lcsp_rpc.spec.in  lcspclient.cpp  lcspclient_rpc.cpp  lcspserver.start  lcspserver_rpc.start
examples/loginCookie/: Makefile.am  Makefile.in  example_declaration.h  index.cpp  index.usp  userver.cfg
examples/lrp_session/: Makefile.am  Makefile.in  common1.cpp  common2.cpp  common3.cpp  common4.cpp  pusher.cpp  session.cpp
examples/parser/: Lexer.ll  Makefile.am  Parser.h  Parser.yy  ParserInterface.cpp  ParserInterface.h  main.cpp
examples/rsign/: Makefile.am  Makefile.in  rsignclient.cpp  rsignclient.spec.in  rsignclient_rpc.cpp  rsignclient_rpc.spec.in
examples/serialize/: Makefile.am  Makefile.in  serialize.cpp
examples/simple_client_server/: Makefile.am  Makefile.in  README  client.cpp  server.cpp
examples/test_manager/: Makefile.am  Makefile.in  test_manager.cpp
examples/uclient/: Makefile.am  Makefile.in  uclient.cfg.default  uclient.cpp
examples/userver/: Makefile.am  Makefile.in  cspserver.spec.in  cspserver.start  rsignserver.spec.in  rsignserver.start  tsaserver.spec.in  tsaserver.start  userver.cfg.default  userver.cpp  wagsmserver.spec.in  wagsmserver.start  web_server.spec.in  web_server.start
examples/workflow/: Makefile.am  Makefile.in  action.cpp  action.h  error.cpp  production.cpp  validation.cpp  workflow.spec.in
examples/xml2txt/: Makefile.am  Makefile.in  main.cpp  xml2txt.spec.in
fuzz/: Makefile.am  Makefile.in  build_libFuzzer.sh  uclient.cfg  uclient_fuzzer.cpp  uhttp_parser_fuzzer.cpp
include/: Makefile.am  Makefile.in
include/ulib/: Makefile.am  Makefile.in  README  all.h  application.h  cache.h  command.h  date.h  file.h  file_config.h  ioring.h  log.h  notifier.h  options.h  process.h  string.h  thread.h  timer.h  timeval.h  tokenizer.h  url.h
m4/: Makefile.am  Makefile.in  ac_check_package.m4  ac_compilation_environment.m4  ac_compilation_options.m4  ac_compile_check_sizeof.m4  ac_cxx_old_iostream.m4  ac_fallocate.m4  ac_try_flag.m4  ax_lib_postgresql.m4  libtool.m4  m4_ax_python_devel.m4  socket_SO_RCVTIMEO.m4
tests/: .colors  .function  Makefile.am  Makefile.in  make_check.sh  make_test.sh  reset.color
tests/base/: Makefile.am  Makefile.in  base64.test  base64escape.test  base64url.test  crypto_base64.c  crypto_base64escape.c  crypto_base64url.c  crypto_des3.c  crypto_dgst.c  crypto_qp.c  crypto_url.c  crypto_xml.c  dgst.test  engine.test  gzio.test  misc.test  qp.test  random.test  sprintf.test  test_gzio.c  test_misc.c  test_random.c  test_sprintf.c  test_utility.c  test_zip.c  url.test  utility.test  xml.test  zip.test
tests/contrib/: HCSP.test  Makefile.am  Makefile.in  RSIGN.test
tests/debug/: Makefile.am  Makefile.in  error.sim  memerror.test  objectDB.test  objectIO.test  simerr.test  test_memerror.cpp  test_objectDB.cpp  test_objectIO.cpp  test_trace.cpp  trace.test
tests/examples/: .htdigest  .htpasswd  FrameworkBenchmarks.sh  IR.test  IR_WEB.cfg  IR_WEB.sh  IR_diff.sh  Makefile.am  Makefile.in  PEC_check_namefile.cfg  PEC_check_namefile.test  PEC_report_anomalie.test  PEC_report_anomalie1.cfg  PEC_report_anomalie2.cfg  PEC_report_messaggi.cfg  PEC_report_messaggi.test  PEC_report_rejected.cfg  PEC_report_rejected.test  PEC_report_virus.cfg  PEC_report_virus.test  alias.txt  bench_http_parser.cpp  benchmarking.sh  businesses.test  client_server.test  csp.test  csp_rpc.test  http.cfg  (+77 more)
(+1696 files in other folders)
