## Makefile.am -- Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies
EXTRA_DIST = $(M4)
MAINTAINERCLEANFILES = Makefile.in

M4 = ac_check_package.m4 ac_compilation_environment.m4 ac_compilation_options.m4 ac_compile_check_sizeof.m4 \
	  ac_cxx_old_iostream.m4 ac_fallocate.m4 ac_try_flag.m4 ax_cxx_compile_stdcxx_11.m4 m4_ax_python_devel.m4 socket_SO_RCVTIMEO.m4

SOURCES = $(M4)
